# python_debugging_01

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  hardmode.yaml  pyproject.toml  vcluster.values.yaml
.github/workflows/: build.yml
app/: crawler.py  fetcher.py  main.py  parser.py  processor.py  types.py
solution/: README.md
